Lower jdk build version to 1.8, in order to support more users