@@ -1,17 +1,19 @@
 package io.github.reflekt.internal;
 
+import static java.util.Collections.singleton;
 import static org.junit.Assert.assertThat;
 import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-import java.util.List;
-import java.util.Set;
-import java.util.function.Supplier;
-
 import io.github.reflekt.ClassFileLocator;
 import io.github.reflekt.ReflektAllTypes;
 import io.github.reflekt.ReflektConf;
+import java.util.Arrays;
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
+import java.util.function.Supplier;
 import org.hamcrest.Matchers;
 import org.junit.Test;
 
@@ -22,7 +24,7 @@ public class ReflektAllTypesImplTest {
     private ClassFileLocator mocka = mock(ClassFileLocator.class);
     private ClassFileLocator mockb = mock(ClassFileLocator.class);
     private ClassFileLocator mockc = mock(ClassFileLocator.class);
-    private List<Supplier<ClassFileLocator>> locators = List.of(
+    private List<Supplier<ClassFileLocator>> locators = Arrays.asList(
             LazyBuilder.lazy(() -> mocka),
             LazyBuilder.lazy(() -> mockb),
             LazyBuilder.lazy(() -> mockc)
@@ -32,14 +34,14 @@ public class ReflektAllTypesImplTest {
     @Test
     public void testGetAllTypes() {
         // given
-        when(mocka.getClasses(anyBoolean())).thenReturn(Set.of("mockA"));
-        when(mockb.getClasses(anyBoolean())).thenReturn(Set.of("mockB"));
-        when(mockc.getClasses(anyBoolean())).thenReturn(Set.of("mockC"));
+        when(mocka.getClasses(anyBoolean())).thenReturn(singleton("mockA"));
+        when(mockb.getClasses(anyBoolean())).thenReturn(singleton("mockB"));
+        when(mockc.getClasses(anyBoolean())).thenReturn(singleton("mockC"));
 
         // when
-        var result = target.getAllTypes();
+        Set<String> result = target.getAllTypes();
 
         // then
-        assertThat(result, Matchers.is(Set.of("mockA", "mockB", "mockC")));
+        assertThat(result, Matchers.is(new HashSet<>(Arrays.asList("mockA", "mockB", "mockC"))));
     }
 }
