@@ -1,17 +1,19 @@
 package io.github.reflekt.internal;
 
+import static java.util.Collections.singleton;
 import static org.hamcrest.Matchers.equalTo;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import io.github.reflekt.ReflektClassesAnnotatedWith;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
-
-import io.github.reflekt.ReflektClassesAnnotatedWith;
 import org.junit.Test;
 
 public class ReflektClassesAnnotatedWithImplTest {
@@ -22,13 +24,13 @@ public class ReflektClassesAnnotatedWithImplTest {
     @Test
     public void testGetClassesAnnotatedWith() {
         // given
-        when(mocka.getAllClasses()).thenReturn(Set.of(NoAnnotation.class, WithAnnotation.class));
+        when(mocka.getAllClasses()).thenReturn(new HashSet<>(Arrays.asList(NoAnnotation.class, WithAnnotation.class)));
 
         // when
-        var annotatedClasses = target.getClassesAnnotatedWith(MyAnnotation.class);
+        Set<Class> annotatedClasses = target.getClassesAnnotatedWith(MyAnnotation.class);
 
         // then
-        assertThat(annotatedClasses, equalTo(Set.of(WithAnnotation.class)));
+        assertThat(annotatedClasses, equalTo(singleton(WithAnnotation.class)));
     }
 
     private class NoAnnotation {
