@@ -6,16 +6,16 @@ import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import io.github.reflekt.ReflektAllConstructors;
+import io.github.reflekt.ReflektConstructorsAnnotatedWith;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.Constructor;
 import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
-
-import io.github.reflekt.ReflektAllConstructors;
-import io.github.reflekt.ReflektConstructorsAnnotatedWith;
 import org.junit.Test;
 
 public class ReflektConstructorsAnnotatedWithImplTest {
@@ -30,14 +30,14 @@ public class ReflektConstructorsAnnotatedWithImplTest {
         when(mocka.getAllConstructors()).thenReturn(testConstructors);
 
         // when
-        var result = target.getConstructorsAnnotatedWith(AnAnnotation.class).stream()
+        Set<String> result = target.getConstructorsAnnotatedWith(AnAnnotation.class).stream()
                 .map(Constructor::getParameterTypes)
                 .filter(a -> a.length >= 2)
                 .map(a -> a[1].getSimpleName())
                 .collect(toSet());
 
         // then
-        assertThat(result, is(Set.of("Integer", "Boolean")));
+        assertThat(result, is(new HashSet<>(Arrays.asList("Integer", "Boolean"))));
     }
 
     @Retention(RetentionPolicy.RUNTIME)
