@@ -1,18 +1,21 @@
 package io.github.reflekt.internal;
 
+import static java.util.Collections.singleton;
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+import io.github.reflekt.ReflektAllMethods;
+import io.github.reflekt.ReflektMethodsWithAnyParamAnnotated;
 import java.lang.annotation.ElementType;
 import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
+import java.lang.reflect.Method;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.Set;
-
-import io.github.reflekt.ReflektAllMethods;
-import io.github.reflekt.ReflektMethodsWithAnyParamAnnotated;
 import org.junit.Test;
 
 public class ReflektMethodsWithAnyParamAnnotatedImplTest {
@@ -23,13 +26,13 @@ public class ReflektMethodsWithAnyParamAnnotatedImplTest {
     @Test
     public void testGetMethodsWithAnyParamAnnotated() throws NoSuchMethodException {
         // given
-        when(mocka.getAllMethods()).thenReturn(Set.of(ATestClass.class.getDeclaredMethods()));
+        when(mocka.getAllMethods()).thenReturn(new HashSet<>(Arrays.asList(ATestClass.class.getDeclaredMethods())));
 
         // when
-        var result = target.getMethodsWithAnyParamAnnotated(ATestInterface.class);
+        Set<Method> result = target.getMethodsWithAnyParamAnnotated(ATestInterface.class);
 
         // then
-        assertThat(result, is(Set.of(ATestClass.class.getDeclaredMethod("aTestMethod", String.class))));
+        assertThat(result, is(singleton(ATestClass.class.getDeclaredMethod("aTestMethod", String.class))));
     }
 
     @SuppressWarnings("unused")
